Fix background image on connector page not showing up

--- a/src/templates/connector/ChangeData/components/Cards/styles.module.less
+++ b/src/templates/connector/ChangeData/components/Cards/styles.module.less
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column-reverse;
     gap: 20px;
+    z-index: 0;
 
     @media (min-width: 1170px) {
         display: flex;
